--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "vite": "^3.0.7"
   },
   "dependencies": {
-    "three": "^0.143.0",
-    "three.interaction": "^0.2.3"
+    "three": "^0.143.0"
   }
 }
